src/test/deca/context/invalid/intermediaire2/mots_reserves/18true.deca
// Description:
// Test du mettre le mot réservé true, en nom de variable.
//
// Resultats:
//  18true.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int true;
}